由于 spark1.6 在 ml 上很多特性尚未支持, 代码做了些调整.